[package]
name = "dapd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dap = { git = "https://github.com/eranif/dap-rs.git", branch = "main" }
thiserror = "1.0.38"
serde_json = "1.0.91"
bytes = "1.3.0"
